         change every header inclusion to be relaive to the current directory
         (Fred).
20070819 disk/wd1770.c: fix restore and seek commands and implement 'read
	 address' command (Stuart).
20070819 disk/wd1770.c: don't use a hardcoded sector number for the read
	 address command -- use the sector base for the current disk image,
	 instead (Stuart).
20070819 disk/plusd.c,disk/wd1770.[ch]: cleanup disk drive emulation (Stuart).
20070819 disk/wd1770.c: fix a logic error in the read address emulation, and
	 treat the command byte 'ff' as a force interrupt command (needed for
	 Betadisk emulation) (Stuart).
20070819 disk/plusd.c,trdos.c: avoid accumulation of index pulse events
	 (fixes bug #1764981) (Stuart).
20070821 machine.c,memory.h: note when we have loaded a custom ROM (Fred).
20070821 trdos.c: correct snapshot register writing (Fred).
20070821 if2.c: fix bracket indentation (Fred).
20070821 disk/plusd.c: correct default ROM loading (Fred).
20070821 disk/plusd.c: clean up +D RAM code (Stuart).
20070823 ui/sdl/sdldisplay.c: update screen when only the statusbar has changed
         (thanks, Gergely) (Fred).
20070828 TODO: remove unused file; handled by SF trackers.
20070829 compat.h,compat/{amiga,unix,win32}/paths.c,utils.[ch]: move
	 utils_is_absolute_path() into compatability directories.
20070830 compat.h,widget/filesel.c: fix up widget builds.
20070830 ui/xlib/xdisplay.c: remove debugging bloat.
20070831 BRANCH: xvideo-2007-08-31 for integrating Gergely's xvideo code
	 (patch #1686228).
20070901 fuse.c,profile.[ch]: prevent snapshots from triggering the assert
	 in profile.c (fixes bug #1727669).
20070901 event.c,sound/sfifo.c,ui/{gtk/gtkui.c,xlib/xdisplay.c},
	 widget/filesel.c: return value of malloc() shouldn't be cast.
20070902 debugger/breakpoint.c: fix typo which prevented timed breakpoints
	 from working properly.
20070903 compat/morphos/osname.c: add missing return value from compat_osname
         (thanks, Q-Master) (Fred).